word formulir dan bukti pendaftaran pendaftaran

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "novay/laravel-word-template": "^1.1",
         "phpoffice/phpspreadsheet": "^1.9",
+        "phpoffice/phpword": "^0.17.0",
         "predis/predis": "^1.1",
         "tymon/jwt-auth": "dev-develop"
     },
